--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-Flask
-jinja2
-requests
-python-memcached
-gevent
-greenlet
-grequests
+Flask==0.10
+Jinja2==2.7
+MarkupSafe==0.18
+Werkzeug==0.9
+gevent==0.13.8
+greenlet==0.4.1
+grequests==0.2.0
+itsdangerous==0.21
+python-memcached==1.53
+requests==1.2.3
+wsgiref==0.1.2
