add in prod stats behind a whitelist

--- a/stackato.yml
+++ b/stackato.yml
@@ -14,5 +14,8 @@ requirements:
     staging:
         ubuntu: [libevent-dev]
 
+env:
+  PIP_OPTS: "--exists-action=w --no-deps --extra-index-url=https://pyrepo.addons.mozilla.org/"
+
 cron:
     - "*/5 * * * * python $HOME/cron.py"
