--- a/local.py.dist
+++ b/local.py.dist
@@ -1,3 +1,9 @@
 S3_AUTH = {'key': '',
            'secret': ''}
 S3_BUCKET = ''
+
+# For use on the API Speed tab
+PINGDOM_USER = ''
+PINGDOM_PASS = ''
+PINGDOM_ACCOUNT_EMAIL = ''
+PINGDOM_APIKEY = ''
