--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,7 @@ requests==1.2.3
 wsgiref==0.1.2
 boto==2.9.6
 curling==0.3.9.3
-mock
+mock==1.0b1
+oauth2==1.5.211
+slumber==0.5.3
+httplib2==0.7.6
