--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
+#-i https://pyrepo.addons.mozilla.org/
 Flask==0.10
 Jinja2==2.7
 MarkupSafe==0.18
 Werkzeug==0.9
-gevent==0.13.8
-greenlet==0.4.1
+gevent==1.0.2
+greenlet==0.4.9
 grequests==0.2.0
 itsdangerous==0.21
-python-memcached==1.53
-requests==1.2.3
+pylibmc==1.5.0
+requests==2.8.1
 wsgiref==0.1.2
 boto==2.9.6
-curling==0.3.9.3
+curling==0.5.1
 mock==1.0b1
 oauth2==1.5.211
+oauthlib==1.0.3
 slumber==0.5.3
 httplib2==0.7.6
 pingdomlib==1.1
